terraform-infra/2-igw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = merge(
    var.tags,
    {
      Name = "${var.env}-igw"
      Role = "networking"
    }
  )
}
