terraform-infra/3-subnets.tf
resource "aws_subnet" "private" {
  count = length(var.private_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.private_subnets[count.index]
  availability_zone = var.azs[count.index]

  tags = merge(
    var.tags,
    {
      Name = "${var.env}-private-${var.azs[count.index]}"
      Role = "networking"
      # var.private_subnet_tags
    }
  )
}

resource "aws_subnet" "public" {
  count = length(var.public_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.public_subnets[count.index]
  availability_zone = var.azs[count.index]
  map_public_ip_on_launch = true 

  tags = merge(
    var.tags,
    {
      Name = "${var.env}-public-${var.azs[count.index]}"
      Role = "networking"
      #var.public_subnet_tags
    }
  )
}
